[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-hallucination-detector"
version = "0.1.0"
description = "Detect hallucinations in LLM outputs using NLI, self-consistency, and grounding. Model-agnostic, one-line API."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Md Sohanur Rahman", email = "mdsohanur.rahman@utsa.edu"}]
keywords = [
  "llm", "hallucination", "faithfulness", "trustworthy-ai",
  "nli", "rag", "llm-evaluation", "openai", "anthropic",
  "medical-nlp", "interpretability"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
nli = ["transformers>=4.30", "torch>=2.0"]
dev = ["pytest>=7", "ruff"]

[project.urls]
Homepage = "https://github.com/sohanur083/llm-hallucination-detector"
Author = "https://sohanur083.github.io"
Paper = "https://sohanur083.github.io/#publications"

[tool.setuptools.packages.find]
where = ["src"]
